# diffskyopt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
diffskyopt/: __init__.py  diffsky_model.py  diffsky_model_fixed_sfh.py  diffsky_param_wrapper_fixed_sfh.py  diffskyopt.py  fake_model.py
diffskyopt/lossfuncs/: cosmos_fit.py  cosmos_fit_before_grid_lc.py  cosmos_fit_fixed_sfh.py  self_fit.py  self_fit_before_grid_lc.py
diffskyopt/scripts/: colors_through_redshift_gif.py  colors_through_redshift_gif_fixed_sfh.py  cosmos_fit_test.py  cosmos_fit_test_fixed_sfh.py  cosmos_validation.py  cosmos_validation_fixed_sfh.py  debug_parallel_fit.py  kdescent_fit_to_cosmos.py  kdescent_fit_to_cosmos_fixed_sfh.py  self_fit_test.py
jobs/cosmos_fit/: best_fit.txt  fit.pbs  fit_fixed_sfh.pbs
notebooks/: diffskyopt_tutorial.ipynb
