[project]
name = "diffskyopt"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"}
]
description = "Optimizing diffsky with diffopt"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "setuptools_scm.get_version"}

[project.urls]
home = "https://github.com/AlanPearl/diffskyopt"

[tool.setuptools_scm]
version_file = "diffskyopt/_version.py"
version_file_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {diffskyopt = "diffskyopt"}

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"
